<resources>
    <string name="app_name">KATRIPS</string>
    <string name="login">LOGIN</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_btn">LOG IN</string>
    <string name="landing_title">Pesan Tiket Kereta-mu</string>
    <string name="dari">Dari</string>
    <string name="ke">Ke</string>
    <string name="tgl_brng">Tanggal Keberangkatan</string>
    <string name="tgl_plg">Tanggal Pulang</string>
    <string name="l_dewasa">Penumpang Dewasa</string>
    <string name="l_bayi">Penumpang Bayi</string>
    <string name="ket_name">NAMA USER</string>
    <string name="email">ALAMAT EMAIL</string>
    <string name="number">NO KTP</string>
    <string name="tv_stasiun">Stasiun A</string>
    <string name="tv_jamBerangkat">10.30 PM</string>
    <string name="tv_namaKereta">Mutiara Timur</string>
    <string name="iv_imageDariKe">imageDariKe</string>
    <string name="tv_keretaKelas">EKONOMI</string>
    <string name="tv_durasiPerjalanan">2 JAM 15 MENIT</string>
    <string name="tv_cthHarga">Rp. 250.000</string>
    <string name="icon_dari_ke">icon_dari_ke</string>
    <string name="tv_kodeStasiun">SGU</string>
    <string name="desc_icon_back">icon_back</string>
    <string name="tv_ex_todo">TODO</string>
    <string name="tv_ex_kategoriDewasa">Kategori : Dewasa</string>
    <string name="tv_hint_namaLengkap">NAMA LENGKAP</string>
    <string name="tv_ex_ml">ML</string>
    <string name="tv_cth_jamTiba">01.45 AM</string>
    <string name="tv_ex_harga">Rp. 250.000</string>
    <string name="tv_hint_email">ALAMAT EMAIL</string>
    <string name="tv_ex_stasiunAsal">SUB</string>
    <string name="tv_ex_jamBrngkt">10.30 PM</string>
    <string name="tv_ex_kereta">Mutiara Timur</string>
    <string name="tv_ex_kelas">EKONOMI</string>
    <string name="tv_ex_totalHarga">Rp 500.000</string>
    <string name="tv_ex_detailHarga">2 x 250.000</string>
    <string name="cd_btn_home">btn_home</string>
    <string name="cd_btn_setting">btn_setting</string>
    <string name="tv_ex_durasiPerjalanan">2 JAM 15 MENIT</string>
    <string name="dc_detailpenumpang">detailPenumpang</string>
    <string name="dc_tv_detailharga">tv_detailHarga</string>
    <string name="dc_group_detailpemesan">group_detailPemesan</string>
    <string name="dc_bardownbox">BardownBox</string>
</resources>