<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FB3AA"
    android:padding="10dp">

    <LinearLayout
        android:layout_centerInParent="true"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textColor="#fff"
            android:fontFamily="sans-serif"
            android:text="@string/login"/>

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:textColorHint="#555"
            android:textColor="#333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:textColorHint="#555"
            android:textColor="#333"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:text="@string/log_in_btn"
            android:background="@drawable/bg_rectangle_button"/>


    </LinearLayout>

</RelativeLayout>