<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputJadwal" >

    <include
        layout="@layout/activity_input_jadwal_dari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="0dp" />

    <include
        layout="@layout/activity_input_jadwal_jmlh_dewasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="-1dp" />

    <include
        layout="@layout/activity_input_jadwal_tgl_berangkat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="0dp" />

    <include
        layout="@layout/activity_input_jadwal_ke"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="1dp" />

    <include
        layout="@layout/activity_input_jadwal_jmlh_bayi"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="237dp"
        android:layout_marginEnd="1dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/dari"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="336dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/ke"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/tgl_brng"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="336dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/l_dewasa"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="233dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/l_bayi"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</RelativeLayout>