<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JadwalKereta">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/scroll_group_2">

        <View
            android:id="@+id/rectangle55"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/rectangle_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/desc_icon_back"
            android:src="@drawable/group_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="@id/rectangle55">

            <ImageView
                android:id="@+id/group_jadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="100dp"
                android:layout_marginRight="125dp"
                android:background="@drawable/group_jadwal"
                android:contentDescription="@string/icon_dari_ke" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_kodeStasiunTujuan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="290dp"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="30dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="40sp"
                android:text="@string/tv_kodeStasiun"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_stasiunTujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="35dp"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/tv_stasiun"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_kodeStasiunAwal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="290dp"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:text="@string/tv_kodeStasiun" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_stasiunAsal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="250dp"
                android:textStyle="normal"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"
                android:text="@string/tv_stasiun"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listPerjalanan"
        android:layout_width="409dp"
        android:layout_height="479dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/rectangle_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>