<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spl_scre_new"
    android:id="@+id/detailPembayaran_constrainLayout">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iv_detailpembayaran_btnback" />


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="360dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.246"
        app:srcCompat="@drawable/iv_detailpembayaran_infoakun" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.83" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="407dp"
        android:layout_height="104dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtlPembayaran_LL_Totalharga_V"
        app:srcCompat="@drawable/iv_detailpembayaran_rectangle1" />

    <LinearLayout
        android:id="@+id/dtlPembayaran_LL_Totalharga_V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:background="@drawable/iv_detailpembayaran_rectangle1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detailPembayaran_constrainLayout">

        <LinearLayout
            android:id="@+id/dtlPembayaran_LL_Totalharga_H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_detailPembayaran_labelTotalHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="64dp"
                android:text="TOTAL HARGA"
                android:textColor="@color/colorBlack"
                android:textSize="18dp">

            </TextView>

            <TextView
                android:id="@+id/tv_detailPembayaran_totalHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:gravity="center"
                android:text="@string/tv_ex_totalHarga"
                android:textColor="@color/colorBlack"
                android:textSize="24dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dtlPembayaran_LL_Totalharga_H2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_detailPembayaran_detialPenumpang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="84dp"
                android:text="Dewasa x 1"
                android:textColor="@color/colorBlack"
                android:textSize="18dp">

            </TextView>

            <TextView
                android:id="@+id/tv_detailPembayaran_detailHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginLeft="84dp"
                android:text="@string/tv_ex_detailHarga"
                android:textColor="@color/colorBlack"
                android:textSize="18dp">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="411dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/iv_detailpembayaran_rectangle2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="76dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home_24px" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="71dp"
        android:layout_height="49dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.542"
        app:srcCompat="@drawable/ic_bookmark_24px" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="87dp"
        android:layout_height="81dp"
        android:layout_marginTop="144dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/iv_detailpembayaran_accakun" />

</androidx.constraintlayout.widget.ConstraintLayout>